Compeleted task ReadmeUpdate to follow

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,13 +14,13 @@
   <!-- include source files here... -->
 
   <script src="src/pearTree.js"></script>
+  <script src="src/pearTreeEach.js"></script>
 
 
   <!-- include spec files here... -->
 
+  <script src="spec/PearTreeEachSpec.js"></script>
   <script src="spec/pearTreeSpec.js"></script>
-
-
 </head>
 
 <body>
