--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,12 +14,12 @@
   <!-- include source files here... -->
 
   <script src="src/pearTree.js"></script>
-  <script src="src/pearTreeEach.js"></script>
+  <script src="src/KnightEach.js"></script>
 
 
   <!-- include spec files here... -->
 
-  <script src="spec/PearTreeEachSpec.js"></script>
+  <script src="spec/KnightEachSpec.js"></script>
   <script src="spec/pearTreeSpec.js"></script>
 </head>
 
